--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <title>Bay Area Ice Cream Map</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script async defer
-            src="http://maps.googleapis.com/maps/api/js?libraries=places,drawing,geometry&key=AIzaSyDGwyhdFTvVrH-BS1RyG5qxA6EEZbZaTSY&v=3&callback=initMap">
-    </script>
-
 </head>
 
 
 <body>
+    <div id="nav-bar">
+        <h3>Bay Area Ice Cream Map</h3>
+        <h4 id="menu" data-bind="text: menuAction, click: toggleNav"></h4>
+    </div>
     <div class="container">
-        <div class="options-box">
-            <h1>Bay Area Ice Cream Map</h1>
+        <div id="options-box">
+            <h2>Bay Area Ice Cream Map</h2>
             <div>
                 <input id="show-listings" type="button" value="Show Listings">
                 <input id="hide-listings" type="button" value="Hide Listings">
@@ -24,51 +23,20 @@
             </div>
             <div>
                 <input id="filter-text" placeholder="Enter your search key here" data-bind="value: filterInput, valueUpdate: 'keyup'" type="text">
+                <input id="clear-filter" type="button" value="Clear filter" data-bind="click: clearFilter">
                 <h6 data-bind="text: noFilterResult"></h6>
                 <ul id="location-list" data-bind="foreach: locationList">
                     <li data-bind='text: title, click: $parent.clickLocation'></li>
                 </ur>
             </div>
-            <hr>
-            <div>
-                <span class="text">Draw a shape to search within it for ice cream!</span>
-                <input id="toggle-drawing" type="button" value="Drawing Tools">
-            </div>
-            <hr>
-            <div>
-                <input id="zoom-to-area-text" type="text" placeholder="Enter your favorite place!">
-                <input id="zoom-to-area" type="button" value="Zoom">
-                <div id="formatted-address"></div>
-            </div>
-            <hr>
-            <div>
-                <span class="text"> Within </span>
-                <select id="max-duration">
-                    <option value="10">10 min</option>
-                    <option value="15">15 min</option>
-                    <option value="30">30 min</option>
-                    <option value="60">1 hour</option>
-                </select>
-                <select id="mode">
-                    <option value="DRIVING">drive</option>
-                    <option value="WALKING">walk</option>
-                    <option value="BICYCLING">bike</option>
-                    <option value="TRANSIT">transit ride</option>
-                </select>
-                <span class="text">of</span>
-                <input id="search-within-time-text" type="text" placeholder="Ex: Google Office NYC or 75 9th Ave, New York, NY">
-                <input id="search-within-time" type="button" value="Go">
-            </div>
-            <hr>
-            <div>
-                <span class="text">Search for nearby places</span>
-                <input id="places-search" type="text" placeholder="Ex: Pizza delivery in NYC">
-                <input id="go-places" type="button" value="go">
-            </div>
         </div>
         <div id="map"></div>
     </div>
 
+    <script async defer
+            src="http://maps.googleapis.com/maps/api/js?libraries=places,drawing,geometry&key=AIzaSyDGwyhdFTvVrH-BS1RyG5qxA6EEZbZaTSY&v=3&callback=initMap">
+    </script>
+    <script src="libs/jquery.min.js"></script>
     <script src="knockout-3.2.0.js"></script>
     <script src="http://www.google.com/jsapi" type="text/javascript"></script>
     <script src="script.js"></script>
