changed some file structure

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             src="http://maps.googleapis.com/maps/api/js?libraries=places,drawing,geometry&key=AIzaSyDGwyhdFTvVrH-BS1RyG5qxA6EEZbZaTSY&v=3&callback=initMap">
     </script>
     <script src="libs/jquery.min.js"></script>
-    <script src="knockout-3.2.0.js"></script>
+    <script src="libs/knockout-3.2.0.js"></script>
     <script src="http://www.google.com/jsapi" type="text/javascript"></script>
     <script src="script.js"></script>
 </body>
