--- a/index.html
+++ b/index.html
@@ -40,16 +40,15 @@
                 </ur>
             </div>
         </aside>
-        <main id="map"></main>
+        <main id="map" style="overflow:visible"></main>
     </div>
 
 
     <script src="libs/jquery.min.js"></script>
     <script src="libs/knockout-3.2.0.js"></script>
-    <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+    <script src="http://www.google.com/jsapi"></script>
     <script src="script.js"></script>
-    <script async defer
-            src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDGwyhdFTvVrH-BS1RyG5qxA6EEZbZaTSY&v=3&callback=initMap">
+    <script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDGwyhdFTvVrH-BS1RyG5qxA6EEZbZaTSY&v=3&callback=initMap" async defer onerror="mapError()">
     </script>
 
 </body>
